# laboratory-work-on-VP

./: CMakeLists.txt  README.md  Rukovodstvo_po_resheniyu_laboratornykh_rabot_po_VP.docx
App/: App.cpp  App.h  CMakeLists.txt
ConsoleManager/: ConsoleManager.h
Cosmodrome/: .gitignore  main.cpp
Cosmodrome/ConsoleManager/: CMakeLists.txt  ConsoleManager.cpp
Cosmodrome/Db/: CMakeLists.txt  Db.cpp  Db.h
Cosmodrome/Menu/: ItemMenu.cpp  Menu.cpp  Menu.h
Cosmodrome/Models/LaunchTask/: LaunchTask.cpp
Cosmodrome/Models/Spaceship/: Spaceship.h
Cosmodrome/Models/User/: User.cpp  User.h
Cosmodrome/Screens/: InterfaceScreen.h
Cosmodrome/Screens/Auth/: Auth.cpp  Auth.h
Cosmodrome/Screens/LaunchTaskList/: LaunchTaskList.cpp  LaunchTaskList.h
Cosmodrome/Screens/Main/: Main.cpp  Main.h
Cosmodrome/Screens/SpaceshipList/: SpaceshipList.h
Cosmodrome/Screens/UserList/: UserList.cpp
Cosmodrome/Store/: ActionTypes.cpp  ActionTypes.h  CMakeLists.txt  State.h  Store.cpp  Store.h
Cosmodrome/consoleUtils/: CMakeLists.txt  consoleUtils.h
Cosmodrome/global/: CMakeLists.txt  config.h
ExampleCode/: template_code_example.cpp
Menu/: CMakeLists.txt  ItemMenu.h
Models/: CMakeLists.txt
Models/LaunchTask/: LaunchTask.h
Models/Spaceship/: Spaceship.cpp
Screens/: CMakeLists.txt
Screens/Launch/: Launch.cpp  Launch.h
Screens/SpaceshipList/: SpaceshipList.cpp
Screens/UserList/: UserList.h
Store/: Action.h
consoleUtils/: consoleUtils.cpp
